// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex renders vertical layout 1`] = `
<div
  class="om-component-ui-flex om-component-ui-flex-vertical"
  style="--om-flex-gap: 8px;"
>
  <div>
    Top
  </div>
  <div>
    Bottom
  </div>
</div>
`;

exports[`Flex renders with gap and alignment 1`] = `
<div
  class="om-component-ui-flex om-component-ui-flex-wrap-wrap om-component-ui-flex-align-center om-component-ui-flex-justify-space-between"
  style="--om-flex-gap: 16px;"
>
  <div>
    One
  </div>
  <div>
    Two
  </div>
</div>
`;
